<resources>
    <string name="app_name">汽车之家</string>
    <string name="morelongClick">长按可拖动不可排序</string>
    <string name="web_comments">发表回帖</string>
    <string name="textdiaoguo">点击跳过</string>
    <string-array name="alls">
        <item>媳妇当车模</item>
        <item>美人"记"</item>
        <item>论坛红人馆</item>
        <item>论坛讲师</item>
        <item>精挑细选</item>
        <item>现身说法</item>
        <item>高端阵地</item>
        <item>电动车</item>
        <item>汇买车</item>
        <item>行车点评</item>
        <item>超级试驾员</item>
        <item>海外购车</item>
        <item>经典老车</item>
        <item>妹子选车</item>
        <item>优惠购车</item>
        <item>原创大片</item>
        <item>顶配风采</item>
        <item>改装有理</item>
        <item>养车有道</item>
        <item>首发阵营</item>
        <item>新车直播</item>
        <item>历史选题</item>
        <item>摩友天地</item>
        <item>蜜月之旅</item>
        <item>甜蜜婚礼</item>
        <item>摄影课堂</item>
        <item>车友聚会</item>
        <item>单车部落</item>
        <item>杂谈俱乐部</item>
        <item>华北游记</item>
        <item>西南游记</item>
        <item>东北游记</item>
        <item>西北游记</item>
        <item>华中游记</item>
        <item>华南游记</item>
        <item>华东游记</item>
        <item>港澳台游记</item>
        <item>海外游记</item>
        <item>沧海遗珠</item>

    </string-array>
    <string name="search_history">搜索历史</string>
    <string name="search_remove">清除</string>
    <string name="dialog_remove_title">您确定要清除历史记录吗?</string>
    <string name="set_up_text_size">正文字号</string>
    <string name="set_up_text_small">小</string>
    <string name="set_up_text_middle">中</string>
    <string name="set_up_text_big">大</string>
    <string name="set_up_text_small_image">文章/帖子小图模式</string>
    <string name="set_up_text_hd_image">车型图片高清显示</string>
    <string name="set_up_text_hd_image_more">高清图模式下耗费更多流量</string>
    <string name="set_up_text_forum_pager">论坛摘要模式</string>
    <string name="set_up_text_push">推送设置</string>
    <string name="set_up_text_clear_cache">清除缓存</string>
    <string name="set_up_text_help">帮助与反馈</string>
    <string name="set_up_text_app_store">去AppStore给个5星吧</string>
    <string name="set_up_text_detection_update">检测更新</string>

    <string name="push_system_message">系统消息</string>
    <string name="push_body">推送内容</string>
    <string name="push_date">推送时间</string>
    <string name="push_person_message">个人消息</string>
    <string name="push_receiving_time">推送接收时间</string>
    <string name="hello">Hello World, JPush!</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="push_modo">推送状态</string>
    <string name="push_time">推送时间</string>
    <string name="set_up_get_time">推送接受时间</string>
    <string name="set_every_day">每日:8:00 - 01:00</string>
    <string name="set_up_text_system">系统消息</string>
    <string name="set_up_text_person">个人消息</string>
</resources>
