<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/setup_puch_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ahlib_nav_icon_back"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView

                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/set_up_text"
                android:text="推送设置"/>
        </RelativeLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_modo"
            style="@style/set_up_text_title"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/write"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_up_text_system"
            style="@style/set_up_text"/>
        <Switch
            android:id="@+id/setup_push_swich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/write"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_up_text_person"
            style="@style/set_up_text"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_time"
            style="@style/set_up_text_title"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setup_push_gettime_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/write"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_up_get_time"
            style="@style/set_up_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
         <TextView
             android:id="@+id/setup_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/set_every_day"
             android:drawableRight="@mipmap/ahlib_right_arrow"
             style="@style/set_up_text_day"/>



        </LinearLayout>

    </LinearLayout>



</LinearLayout>